fixed the z-index
see above. for the content

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
   width: 100%;
   min-height: 1500px;
   box-sizing: border-box;
-  z-index:0;
+  z-index:99;
 }
 
 @media screen and (min-width: 100px ) and (max-width: 320px) {
@@ -592,8 +592,9 @@ a.button  {
   max-width:594px;
   height:100%;
   max-height:32px;
-  margin: 30px 0 30px 0;
   display:block;
+  margin: 0 auto;
+  padding: 20px 0px 20px 0px;
 
 }
 
